# cli-rag

./: .adr-rag.toml  .cli-rag.toml  .gitignore  AGENTS.md  BRIDGE_CHECKLIST.md  Cargo.toml  Justfile  README.md  repomix-output.xml  scratch.md  scratch2.md  test.toml
.cli-rag/templates/: ADR.md  (+5 more)
.githooks/: pre-commit
RAG/: PARKING-LOT.md
contracts/: AGENTS.md  changelog.md  global-conventions.md  repomix-output.xml
docs/: gypty.md
scripts/: check_yaml_format.py  ci-fixtures-check.sh  line_guard.sh
src/: AGENTS.md  cli.rs  config.rs  discovery.rs  graph.rs  index.rs  lib.rs  model.rs  protocol.rs  repomix-output.xml  util.rs  validate.rs  watch.rs
tests/: integration_ai_index_apply.rs  integration_ai_index_plan.rs  integration_ai_new.rs  integration_cluster.rs  integration_config_precedence.rs  integration_config_version.rs  integration_cycle_policy.rs  integration_doctor.rs  integration_get_ai.rs  integration_get_ai_neighbors.rs  integration_graph_json.rs  integration_group_validate.rs  integration_help.rs  integration_index_unified.rs  integration_info.rs  integration_init.rs  integration_init_schema.rs  integration_lua_new.rs  integration_lua_overlay.rs  integration_lua_validate.rs  integration_nested_user_config.rs  integration_new.rs  integration_path_json.rs  integration_search_filters.rs  integration_search_gtd.rs  integration_search_topics.rs  integration_unified_index.rs  integration_validate_json.rs  integration_validate_write_groups.rs  integration_watch_ndjson.rs
tmp/: DEVLOG.md  ROADMAP.md  old_ROADMAP-CHECKLIST.md  old_refactor-checklist.md
(+258 files in other folders)
