[package]
name = "cli-rag"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
globwalk = "0.8"
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2.5"
regex = "1.10"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
notify = "6.1"
rayon = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "cli-rag"
path = "src/bin/cli-rag.rs"
